tests/typechecking/valid/float/float_div.ml
let x = 2.3 in
  let y = 4.5 in
    let z = x +. 3.0 in
      let m = z+.y/.2.0 in ()