tests/typechecking/invalid/arithmetic_operations/float_int_sub.ml
let x = 2.3 in
  let y = 4.5 in
    let z = x +. 3.0 in
      z+y-2; 
      ()